--- a/S07_ErudioMicroservices.NET6-FirstMicrosservices/GeekShooping/GeekShopping.ProductAPI/appsettings.json
+++ b/S07_ErudioMicroservices.NET6-FirstMicrosservices/GeekShooping/GeekShopping.ProductAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
-  "MySQLConnection": {
-    "MySQLConnectionString": "Server=localhost;DataBase=geek_shopping_product_api;Uid=root;Pwd:root"
+  "MySQlConnection": {
+    "MySQlConnectionString": "Server=localhost;DataBase=geek_shopping_product_api;Uid=root;Pwd=root"
   },
   "Logging": {
     "LogLevel": {
