--- a/S11_ErudioMicroservices.NET6-AuthenticationWithOauth2OpenIDAndIdentityServer/GeekShooping/GeekShooping.IdentityServer/appsettings.json
+++ b/S11_ErudioMicroservices.NET6-AuthenticationWithOauth2OpenIDAndIdentityServer/GeekShooping/GeekShooping.IdentityServer/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "MySQlConnection": {
+    "MySQlConnectionString": "Server=localhost;DataBase=geek_shopping_identity_server;Uid=root;Pwd=root"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
